# Mariupol_Urbicide_2026

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  match_burials.py  occupation_court_crawler.py  pyproject.toml
db/: schema.sql
docs/: STATS.md  about_trilingual.md  compass_artifact_wf-237d08bb-e490-44a2-ae0f-fafad90c8550_text_markdown.md  data_model.md  demand_side_resale_scan.md  dnr_bezkhoz_appellate_outcomes_2026-06.md  dnr_bezkhoz_citizenship_doctrine_2026-06.md  dnr_district_first_instance_2026-06.md  index.html  legal_mechanisms_review.md  legal_mechanisms_visualization_prompt.md  mariupol_channel_research_terms.md  master-dossier-rus.docx  nash_channel_findings_2026-07.md  new_telegram_channels_intel_2026-06.md  pre_petition_sourcing.md  progress_report_2026-06.md  reconceptualization_2026.md  research_memo_2026-06-14_new_angles.md  sources.md  stakeholder_network.md  tier3_corroboration_design.md
memory/: 218fz_key_provisions.md
scripts/: 00_capture_sources.py  01_crawl.py  02_parse.py  03_load.py  04_load_toponyms.py  05_crawl_ownerless_lists.py  06_parse_ownerless_decrees.py  06a_ocr_decrees.py  07_parse_damage_assessment.py  08_crawl_demolition_decrees.py  09_parse_demolition_decrees.py  100_crawl_mitropolitskaya102_chat.py  101_crawl_invite_ki8JvbQallmMzg6.py  102_parse_mitropolitskaya102_chat.py  103_crawl_invite_ooUT61cOOFZjMDcy.py  104_parse_bakhchivandzhi13_17_chat.py  105_crawl_invite_jWgnL94OdmYmMy.py  106_crawl_mariupol_komsomolets_chat.py  107_crawl_invite_ucWZaRSL1Gk1NjRi.py  108_crawl_metalurgov89_91_chat.py  (+218 more)
(+79 files in other folders)
