[project]
name = "mariupol-property-seizures"
version = "0.1.0"
description = "Forensic evidence pipeline for documenting Russian property seizures in occupied Mariupol"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rapidfuzz>=3.6",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
    "pdfplumber>=0.10",
]

[project.optional-dependencies]
geo = ["shapely>=2.0", "geopandas>=0.14", "pyproj>=3.6", "pyshp>=2.3"]
telegram = ["telethon>=1.36"]
imagery = ["rasterio>=1.3", "numpy>=1.26", "pillow>=10.0"]
ocr = ["pytesseract>=0.3.13", "pdf2image>=1.17"]  # requires brew install tesseract tesseract-lang poppler
media = ["yt-dlp>=2024.8.6"]  # video capture (scripts/157); also requires brew install ffmpeg
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
